# MyPackage

./: .gitignore  CMakeLists.txt  Config.cmake.in  Version.cmake.in  readme.md
include/MyPackage/: MyFuncs.h
samples/: CMakeLists.txt  GetArea.cpp
src/: MyFuncs.cpp
tests/: CMakeLists.txt  test_myfuncs.cpp
